HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiReturnRegionLocalRawPtr/Expected.uv
//! Expected diagnostic metadata for the FfiReturnRegionLocalRawPtr rejected-source specimen.

expectedDiagnostic("E-SYS-3360", "rule.23.FFI-Return-RegionLocalRawPtr-Err")
